2000-10-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: handle CONNECT_VERIFY in CONNECTED state.
	* NetAccess.cc: Disconnect before Connect.

2000-10-03  Alexander V. Lukyanov  <lav@yars.free.net>

	* Makefile.am: use C compiler to compile modules, it should use c++
	  for c++ files automatically.
	* ResMgr.cc: use extern "C" for regex.h, this fixes linking for some
	  systems.

2000-09-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: fix for `ls|head'.
	* ftpclass.cc, resource.cc: ftp:bind-data-socket new setting;
	  fix for assert(rate_limit!=0).
	* url.cc, url.h: provisions for not using rfc1738 for ftp urls.

2000-09-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: fix lcd & in queue.
	* commands.cc: fix cmd:move-background handling when there is no jobs.

2000-09-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: fix cd & in queue.

2000-09-21  Arkadiusz Miskiewicz <misiek@pld.org.pl>

	* ftpclass.cc: fix addr_received initialization for ipv6.

2000-09-21  Alexander V. Lukyanov  <lav@yars.free.net>

	* module.cc: aliases for https and ftps.

2000-09-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: fix error on some compilers (e.g. irix).

2000-09-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* pgetJob.cc: fix yet another hang bug (hopefully last).

2000-09-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: move out of CONNECTING_DATA_SOCKET after DataClose
	  (fixes rare `bad file number' error).
	* MirrorJob.cc: propagate remove_source_files to submirrors.

2000-09-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc: include modconfig.h. (fixes module compilation).

2000-09-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* buffer.cc: handle eof on ssl connection properly.

2000-09-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: don't remember path=/ in cookies; skip all spaces
	  before a cookie.
