@@ -1008,7 +1008,7 @@ HttpGlob::HttpGlob(FileAccess *s,const char *n_pattern)
       // no need to glob, just unquote
       char *u=alloca_strdup(pattern);
       UnquoteWildcards(u);
-      add(u);
+      add(new FileInfo(u));
       done=true;
       return;
    }
