@@ -1,3 +1,10 @@
+2000-10-12  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* FileAccess.cc, FileAccess.h, FtpSplitList.cc, FtpSplitList.h,
+	  FtpGlob.cc, HttpDir.cc: Glob::add cleanup.
+	* complete.cc: fix completion for filenames starting with tilde.
+	* ftpclass.cc, ftpclass.h: fix for old gcc (ftps undefined).
+
 2000-10-04  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* Http.cc: handle CONNECT_VERIFY in CONNECTED state.
